from enum import Enum


class Ruolo(Enum):
    UTENTE = "Utente"
    CISO = "CISO"
    AMMINISTRATORE_DI_SISTEMA = "Amministratore di sistema"
